Moved files around, fixed nav bar on mobile?

--- a/src/page_drip.css
+++ b/src/page_drip.css
@@ -3,7 +3,7 @@ html
 {
     scroll-behavior: smooth;
     /* Theres got to be something that works for this... */
-    scroll-padding-top: 10%;
+    scroll-padding-top: var(--TopScrollPadding, 300px);
 }
 
 /* Body segment decoration */
@@ -11,7 +11,8 @@ body
 {
     background-color: rgb(63, 132, 199);
      /* who knew fixing the nav bar was that easy lol */
-     margin: 0;
+    margin: 0;
+    padding: 0;
 }
 header
 {
